<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="tab_borrowers">Borrower</string>
    <string name="tab_lenders">Lenders</string>
    <string name="action_settings">Settings</string>
    <string name="borrowers_pager_title">Borrowers</string>
    <string name="menu_item_add_borrower">New Borrower</string>
    <string name="menu_item_delete_borrower">Delete</string>
    <string name="lenders_pager_title">Lenders</string>
    <string name="menu_item_add_lender">New Lender</string>
    <string name="menu_item_save">Save</string>
    <string name="name">name</string>
    <string name="balance">Balance:</string>
    <string name="amount">Amount</string>

    <!-- Calendar Strings -->
    <string name="calendar_title_dateBorrowed">Date Borrowed</string>
    <string name="calendar_title_dateDue">Date Due</string>
    <string name="calendar_title_dateLoaned">Date Loaned</string>

    <!-- Navigation drawer strings -->
    <string name="title_section1">Borrowers</string>
    <string name="title_section2">Lenders</string>
    <string name="title_section3">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Borrowers</item>
        <item>Lenders</item>
        <item>Settings</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_borrower</item>
        <item>@drawable/ic_lender</item>
        <item>@android:drawable/ic_menu_preferences</item>
    </array>

    <!-- Done bar strings -->
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>

    <string name="detail_name_header">Name</string>
    <string name="detail_lender_name_hint">Enter name of Lender</string>
    <string name="detail_phone_header">PHONE</string>
    <string name="detail_phone_hint">Enter phone number</string>
    <string name="detail_amountLoaned_header">AMOUNT LOANED</string>
    <string name="detail_interest_header">INTEREST</string>
    <string name="detail_amount_hint">$</string>
    <string name="detail_interest_hint">%</string>
    <string name="detail_date_loaned_header">DATE LOANED</string>
    <string name="detail_date_loaned_hint">DD/MM/YYYY</string>
    <string name="detail_date_due_header">DATE DUE</string>
    <string name="detail_notification_time_header">Notification Time</string>
    <string name="detail_date_due_hint">DD/MM/YYYY</string>
    <string name="detail_notification_checkbox">Notify Me</string>
    <string name="detail_balance_header">BALANCE</string>
    <string name="detail_select_contact_button">Select Existing Contact</string>
    <string name="detail_borrower_name_hint">Enter name of Borrower</string>
    <string name="detail_amountBorrowed_header">AMOUNT BORROWED</string>
    <string name="detail_date_borrowed">DATE BORROWED</string>
    <string name="title_activity_pay_up_preferences">PayUpPreferences</string>
    <string name="search_hint">Search by name</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="detail_amount_paid_header">AMOUNT PAID</string>

    <!--notification strings-->
    <string name="borrower_due">Borrower due to pay</string>
    <string name="borrower_context_msg">Owes you money</string>
    <string name="lender_due">Lender needs to be paid</string>
    <string name="lender_context_msg">Should be paid today</string>

    <string name="action_bar_list_subtitle">Total: </string>
    <string name="action_bar_list_subtitle_search">List - Searching for: </string>
    <string name="borrower_detail_fragment_title">Borrower</string>
    <string name="lender_detail_fragment_title">Lender</string>
    <string name="today">Today</string>
    <string name="borrower_saved">Borrower Saved</string>
    <string name="borrower_updated">Borrower Updated</string>
    <string name="lender_saved">Lender Saved</string>
    <string name="lender_updated">Lender Updated</string>
    <string name="time_reset">Time reset</string>
    <string name="upcoming_time">Please set due date for upcoming time</string>
    <string name="interest_dialog_title">Simple interest for loan</string>
    <string name="dialog_interest_per_week">Interest per week</string>
    <string name="dialog_no_weeks_to_pay">No. of Weeks to pay</string>
    <string name="Borrowers_empty_listView_text">There are no borrowers to take money from :(</string>
    <string name="lenders_empty_listView_text">There are no lenders to give money to :)</string>


    <!--settings strings -->
    <string name="notification_title">Notification Settings</string>
    <string name="default_notification_time">Default notification time</string>
    <string name="alert_sound">Alert Sound</string>
    <string name="select_ringtone">Select Alert Sound</string>
    <string name="vibrate">Vibrate On Alert</string>
    <string name="time_picker_select">Time Picker View</string>
    <string name="picker_type">Picker Type</string>
    <string name="simple_time_picker">Simple time picker</string>
    <string name="Advance_time_picker">Advance time picker</string>
    <string name="list_value1">"1"</string>
    <string name="list_value2">"2"</string>

    <string name="About">About</string>
    <string name="Rate_app">Rate app for support</string>
    <string name="FeedBack">Feedback</string>
    <string name="Feedback_summary">Send suggestions about how this app can be improved</string>

   <string name="about_version">Version: %s</string>
    <string name="about_author">Created by Alexis Simpson</string>
    <string name="about_google_play">Rate in Google Play</string>
    <string name="about_contact">Contact author</string>
    <string name="about_contact_do_not_remove">\n\n--------------------\nPlease, do not remove following technical information!\n--------------------\n</string>


    <string name="dropbox_link_dialog_title">Dropbox account</string>
    <string name="dropbox_link_dialog_message">You can sign in to existing Dropbox account or create new one. After successful account linking all your data will be moved to Dropbox cloud storage.</string>
    <string name="dropbox_link_dialog_yes">Continue</string>
    <string name="dropbox_link_dialog_no">Not now</string>

    <string name="action_dropbox_link">Link Dropbox account</string>
    <string name="action_dropbox_refresh">Refresh</string>
    <string name="action_dropbox_refresh_toast">Sync has been started…</string>
    <string name="action_dropbox_link_succeded_toast">Dropbox account has been linked</string>
    <string name="action_dropbox_link_failed_toast">Dropbox account link failed!</string>
    <string name="action_dropbox_already_linked_toast">Dropbox account linked</string>

    <string name="common_ok">OK</string>
    <string name="common_close">Close</string>

    <string name="translation">english (default)</string>
    <string name="search_title">Search</string>
    <string name="action_sort">Sort</string>
    <string name="sort_by_name">By name</string>
    <string name="sort_by_due_date">By due date</string>
    <string name="sort_by_date_loaned_or_borrowed">By date loaned/borrowed</string>

    <string name="no_connection_toast">No network connection!</string>
    <string name="owes_you">Owes you:</string>
    <string name="You_owe">You owe:</string>

    <string name="mark_as_paid">Mark loan as paid</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="action_menu_details">Details</string>
    <string name="action_menu_delete">Delete</string>
    <string name="action_menu_paid">Paid</string>
    <string name="app_name">Pay Off -Dept Manager</string>


</resources>
