<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="14dp"
		android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/ic_launcher"/>

            <TextView
                style="@style/AboutText"
                android:id="@+id/version"
                android:text="@string/about_version"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="6dp"/>

            </LinearLayout>

		<TextView
			style="@style/AboutText"
			android:id="@+id/author"
			android:text="@string/about_author"/>



        <Button
			style="@style/AboutText"
			android:id="@+id/google_play"
			android:text="@string/Rate_app"/>

		<Button
			style="@style/AboutText"
			android:id="@+id/contact"
			android:text="@string/about_contact"/>

		</LinearLayout>

</ScrollView>